--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'reactClass01'
+rootProject.name = 'desafio06'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
