--- a/ios/desafio06.xcodeproj/xcshareddata/xcschemes/desafio06-tvOS.xcscheme
+++ b/ios/desafio06.xcodeproj/xcshareddata/xcschemes/desafio06-tvOS.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "reactClass01-tvOS.app"
-               BlueprintName = "reactClass01-tvOS"
-               ReferencedContainer = "container:reactClass01.xcodeproj">
+               BuildableName = "desafio06-tvOS.app"
+               BlueprintName = "desafio06-tvOS"
+               ReferencedContainer = "container:desafio06.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "reactClass01-tvOSTests.xctest"
-               BlueprintName = "reactClass01-tvOSTests"
-               ReferencedContainer = "container:reactClass01.xcodeproj">
+               BuildableName = "desafio06-tvOSTests.xctest"
+               BlueprintName = "desafio06-tvOSTests"
+               ReferencedContainer = "container:desafio06.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "reactClass01-tvOSTests.xctest"
-               BlueprintName = "reactClass01-tvOSTests"
-               ReferencedContainer = "container:reactClass01.xcodeproj">
+               BuildableName = "desafio06-tvOSTests.xctest"
+               BlueprintName = "desafio06-tvOSTests"
+               ReferencedContainer = "container:desafio06.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "reactClass01-tvOS.app"
-            BlueprintName = "reactClass01-tvOS"
-            ReferencedContainer = "container:reactClass01.xcodeproj">
+            BuildableName = "desafio06-tvOS.app"
+            BlueprintName = "desafio06-tvOS"
+            ReferencedContainer = "container:desafio06.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "reactClass01-tvOS.app"
-            BlueprintName = "reactClass01-tvOS"
-            ReferencedContainer = "container:reactClass01.xcodeproj">
+            BuildableName = "desafio06-tvOS.app"
+            BlueprintName = "desafio06-tvOS"
+            ReferencedContainer = "container:desafio06.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "reactClass01-tvOS.app"
-            BlueprintName = "reactClass01-tvOS"
-            ReferencedContainer = "container:reactClass01.xcodeproj">
+            BuildableName = "desafio06-tvOS.app"
+            BlueprintName = "desafio06-tvOS"
+            ReferencedContainer = "container:desafio06.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
