--- a/ios/desafio06.xcodeproj/xcshareddata/xcschemes/desafio06.xcscheme
+++ b/ios/desafio06.xcodeproj/xcshareddata/xcschemes/desafio06.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "reactClass01.app"
-               BlueprintName = "reactClass01"
-               ReferencedContainer = "container:reactClass01.xcodeproj">
+               BuildableName = "desafio06.app"
+               BlueprintName = "desafio06"
+               ReferencedContainer = "container:desafio06.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "reactClass01Tests.xctest"
-               BlueprintName = "reactClass01Tests"
-               ReferencedContainer = "container:reactClass01.xcodeproj">
+               BuildableName = "desafio06Tests.xctest"
+               BlueprintName = "desafio06Tests"
+               ReferencedContainer = "container:desafio06.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "reactClass01Tests.xctest"
-               BlueprintName = "reactClass01Tests"
-               ReferencedContainer = "container:reactClass01.xcodeproj">
+               BuildableName = "desafio06Tests.xctest"
+               BlueprintName = "desafio06Tests"
+               ReferencedContainer = "container:desafio06.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reactClass01.app"
-            BlueprintName = "reactClass01"
-            ReferencedContainer = "container:reactClass01.xcodeproj">
+            BuildableName = "desafio06.app"
+            BlueprintName = "desafio06"
+            ReferencedContainer = "container:desafio06.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reactClass01.app"
-            BlueprintName = "reactClass01"
-            ReferencedContainer = "container:reactClass01.xcodeproj">
+            BuildableName = "desafio06.app"
+            BlueprintName = "desafio06"
+            ReferencedContainer = "container:desafio06.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reactClass01.app"
-            BlueprintName = "reactClass01"
-            ReferencedContainer = "container:reactClass01.xcodeproj">
+            BuildableName = "desafio06.app"
+            BlueprintName = "desafio06"
+            ReferencedContainer = "container:desafio06.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
